# pywafo

./: .codeclimate.yml  .coveragerc  .gitignore  .landscape.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CHANGES.rst  COPYRIGHTS  LICENSE.txt  MANIFEST.in  ProjectHome.md  README.rst  build_package.py  conftest.py  manifest  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: cibuildwheel.yml  tests.yml
docs/: Makefile  conf.py  index.rst
docs/appendix/: bibliography.rst
docs/how-to/: index.rst
docs/intro/: index.rst
docs/reference/: index.rst  wafo.covariance.rst  wafo.covariance.tests.rst  wafo.data.rst  wafo.doc.rst  wafo.kdetools.rst  wafo.kdetools.tests.rst  wafo.rst  wafo.sg_filter.rst  wafo.sg_filter.tests.rst  wafo.spectrum.rst  wafo.spectrum.tests.rst  wafo.stats.rst  wafo.stats.tests.rst  wafo.tests.rst  wafo.transform.rst  wafo.transform.tests.rst  wafo.wave_theory.rst  wafo.wave_theory.tests.rst  wafo_summary.rst
docs/topics/: index.rst
docs/tutorials/: appendix.rst  chapter2.rst  chapter3.rst  chapter5.rst  chapter6.rst  foreword.rst  index.rst  install.rst  nomenclature.rst  technical.rst  whatsnext.rst
docs/tutorials/Nyabilder/: 001f_sim.eps  001fig_sim.fig  002f_spc.eps  002f_spc.fig  003f_pdf.eps  003f_pdf.fig  004f_drs.eps  004f_drs.fig  006f_rfc.eps  006f_rfc.fig  007f_yura.eps  007f_yura.fig  008f_yuragev.eps  008f_yuragev.fig  FigEx2RFCint3D.eps  FigEx2RFCintCC.eps  FigEx2SamplePath.eps  FigRFCdef_introNew.eps  FigTP_MatrixNew.eps  LundUniversity_V_BLACK.eps  Mv3.eps  cavdens.eps  cavdens.fig  fatigue_10.eps  fatigue_10.fig  fatigue_11.eps  fatigue_11.fig  fatigue_12.eps  fatigue_12.fig  fatigue_13.eps  fatigue_13.fig  fatigue_14_25.eps  fatigue_14_25.fig  fatigue_14_75.eps  fatigue_14_75.fig  fatigue_15.eps  fatigue_15.fig  fatigue_16.eps  fatigue_16.fig  fatigue_17.eps  (+176 more)
docs/tutorials/appendix/: kdedemo1f1.eps  kdedemo1f2.eps  kdedemo1f3.eps  qspecvar.eps  qspecvar1.eps  rayleighkde.eps  rayleightransformedkde.eps
pywafo/: .project  .pydevproject  build_all.py  gendocwafo.py  nose_all.py  setup.py
pywafo/src/: epydoc_wafo.prj
pywafo/src/Wafo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pywafo/src/wafo/: MSPPT.py  __init__.py  bitwise.py  c_library.pyd  containers.py  cov2mod.pyd  dctpack.py  definitions.py  definitions.~py  demos.py  f2py_tools.py  fig.py  gaussian.py  graphutil.py  integrate.py  interpolate.py  kdetools.py  magic.py  meshgrid.py  misc.py  mvn.pyd  mvnprdmod.pyd  (+10 more)
pywafo/src/wafo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
source/c_library/: build_all.py  c_functions.c  c_library.pyf  c_librarymodule.c  setup.py
source/mreg/: build_all.py  cov2mmpdfreg.f  cov2mmpdfreg_intfc.f  dsvdc.f  intfcmod.f  mregmodule.f
source/mvn/: build_all.py  mvndst.f  mvnmodule.c
source/mvnprd/: build_all.py  mvnprd.dsp  mvnprd.dsw  mvnprd.f  mvnprd.pyf  mvnprd_interface.f  mvnprodcorrprb.f  setup.py
source/old/: erfcore.f  erfcore.pyf  erfcoremod.f  erfcoremod.f90  erfcoremod.pyf  erfcoremod1.pyf  erfcoremod_interface.f90
source/rind2007/: .cproject  build_all.py  fimod.f  intmodule.f  jacobmod.f  rind71mod.f  rind_interface.f  rindmod.f  swapmod.f  test_fimod.dsp  test_fimod.dsw  test_fimod.f  test_rind71mod.f  test_rindmod.f
source/test_f90/: hello.f90  hello.txt  hello_interface.f90  mymod.f90  types.f90
src/Wafo.egg-info/: PKG-INFO  top_level.txt
src/wafo/: SpecData1D.mm  __init__.py  _misc_numba.py  bitwise.py  containers.py  dctpack.py  definitions.py  demo_sg.py  demos.py  f2py_tools.py  fig.py  findrfc.c  gaussian.py  graphutil.py  info.py  integrate.py  integrate_oscillating.py  interpolate.py  kdetools.py  license.py  markov.py  misc.py  namedtuple.py  numba_misc.py  objects.py  padua.py  plotbackend.py  polynomial.py  polynomial_old.py  testing.py  wafodata.py  wavemodels.py  win32_utils.py
statsmodels/: .coveragerc  .gitattributes  COPYRIGHTS.txt  LICENSE.txt  README.txt  crit.npy  detomega.npy  loglike.npy  phis.npy  totobs.npy
statsmodels/tools/: dataset_rst.py  update_web.py
trunk/: gendocwafo.py  setup.py
trunk/pywafo/: .project  .pydevproject  build_all.py  setup.py  setup_old.py
trunk/statsmodels/: .bzrignore  .gitignore  CHANGES.txt  INSTALL.txt  causality.npy  coefs.npy  irf.npy  nahead.npy  obs.npy  orthirf.npy  setup.py  stderr.npy  type.npy
trunk/wafo/: definitions.py  integrate.py  interpolate.py  meshgrid.py  mvn.pyd  mvndst.f  objects.py
wafo/: MSO.py  MSPPT.py  __init__.py  bitwise.py  c_library.pyd  conftest.py  containers.py  dctpack.py  definitions.py  demo_sg.py  demos.py  disufq.pyf  f2py_tools.py  fig.py  gaussian.py  graphutil.py  info.py  integrate.py  integrate_oscillating.py  interpolate.py  kdetools.py  markov.py  misc.py  mvn.pyf  mvn1.pyf  namedtuple.py  numba_misc.py  numpy_utils.py  objects.py  padua.py  plotbackend.py  polynomial.py  powerpoint.py  rindmod.pyd  setup.py  sg_filter.py  testing.py  version.py  wafodata.py  win32_utils.py
wafo/covariance/: __init__.py  core.py  estimation.py
wafo/data/: __init__.py  info.py  sea.m
wafo/doc/: rainflow_example.py
wafo/kdetools/: __init__.py  demo.py  gridding.py  kdetools.py  kernels.py
wafo/sg_filter/: __init__.py  _core.py  demos.py
wafo/spectrum/: __init__.py  core.py  models.py
wafo/stats/: __init__.py  _binned_statistic.py  _constants.py  _continuous_distns.py  _discrete_distns.py  _distn_infrastructure.py  _distr_params.py  _multivariate.py  _numpy_compat.py  _util.py  contingency.py  core.py  distributions.py  estimation.py  kde.py  kde_example.py  misc.py  morestats.py  mstats.py  mstats_basic.py  mstats_extras.py  rv.py  six.py  stats.py  twolumps.py  vonmises.py  vonmises_cython.pyx
wafo/test/: test_misc.py
wafo/tests/: test_dct_pack.py  test_gaussian.py  test_integrate.py  test_integrate_oscillating.py  test_kdetools.py  test_misc.py  test_numpy_utils.py  test_objects.py  test_padua.py  test_sg_filter.py
wafo/transform/: __init__.py  core.py  estimation.py  models.py
wafo/wave_theory/: __init__.py  core.py  dispersion_relation.py
(+1047 files in other folders)
